--- a/jhj-dao/pom.xml
+++ b/jhj-dao/pom.xml
@@ -4,10 +4,10 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.jhj</groupId>
-		<artifactId>jhj-parent2.0</artifactId>
-		<version>2.0-SNAPSHOT</version>
+		<artifactId>jhj-parent2.1</artifactId>
+		<version>2.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>jhj-dao2.0</artifactId>
+	<artifactId>jhj-dao</artifactId>
 	<name>jhj-dao</name>
 	<url>http://maven.apache.org</url>
   <dependencies>
