--- a/jhj-oa/pom.xml
+++ b/jhj-oa/pom.xml
@@ -4,10 +4,10 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.jhj</groupId>
-		<artifactId>jhj-parent2.0</artifactId>
-		<version>2.0-SNAPSHOT</version>
+		<artifactId>jhj-parent2.1</artifactId>
+		<version>2.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>jhj-oa2.0</artifactId>
+	<artifactId>jhj-oa</artifactId>
 	<packaging>war</packaging>
 	<name>jhj-oa Maven Webapp</name>
 	<url>http://maven.apache.org</url>
@@ -22,20 +22,20 @@
 
 		<dependency>
 			<groupId>com.jhj</groupId>
-			<artifactId>jhj-utils2.0</artifactId>
-			<version>2.0-SNAPSHOT</version>
+			<artifactId>jhj-utils</artifactId>
+			<version>2.1-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.jhj</groupId>
-			<artifactId>jhj-dao2.0</artifactId>
-			<version>2.0-SNAPSHOT</version>
+			<artifactId>jhj-dao</artifactId>
+			<version>2.1-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.jhj</groupId>
-			<artifactId>jhj-service2.0</artifactId>
-			<version>2.0-SNAPSHOT</version>
+			<artifactId>jhj-service</artifactId>
+			<version>2.1-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
