--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.jhj</groupId>
-	<artifactId>jhj-parent2.0</artifactId>
+	<artifactId>jhj-parent2.1</artifactId>
 	<packaging>pom</packaging>
 	<version>2.0-SNAPSHOT</version>
 	<name>jhj-parent</name>
@@ -40,11 +40,11 @@
 		</dependency>
 	</dependencies>
 	<modules>
-		<module>jhj-dao2.0</module>
-		<module>jhj-service2.0</module>
-		<module>jhj-app2.0</module>
-		<module>jhj-oa2.0</module>
-		<module>jhj-utils2.0</module>
+		<module>jhj-dao</module>
+		<module>jhj-service</module>
+		<module>jhj-app</module>
+		<module>jhj-oa</module>
+		<module>jhj-utils</module>
 	</modules>
   <build>
 		<pluginManagement>
