--- a/jhj-utils/pom.xml
+++ b/jhj-utils/pom.xml
@@ -41,7 +41,7 @@
 		</dependency>
 		
 		<!-- 语音短信验证码包,不完整 -->
-		<dependency>
+		<dependency> 
 			<groupId>yuntongxun</groupId>
 			<artifactId>CCP_REST_SDK_JAVA_v2.7r</artifactId>
 			<version>0.0.1</version>
@@ -232,7 +232,23 @@
 			<artifactId>protobuf-java</artifactId>
 			<version>2.6.1</version>
 		</dependency>		
-
+		
+		<!-- 阿里云消息队列sdk 
+		<dependency> 
+		    <groupId>com.aliyun.openservices</groupId>
+		   <artifactId>ons-client</artifactId>
+		   <version>1.2.1</version>
+		</dependency>  -->
+		 
+		
+		<!-- poi 导出excel -->
+		<dependency>
+		    <groupId>org.apache.poi</groupId>
+		    <artifactId>poi</artifactId>
+		    <version>3.14</version>
+		</dependency> 
+		 
+		   
 	</dependencies>
 	<build>
 		<plugins>
