git-svn-id: svn://123.57.173.36/jhj-parent2.0/Branches/jhj-parent2.1@921 57d5540f-7636-4a73-8af3-7dc9f519f443

--- a/jhj-utils/src/main/resources/email_config.properties
+++ b/jhj-utils/src/main/resources/email_config.properties
@@ -1,5 +1,11 @@
-mail.smtp.host=smtp.qq.com
-mail.smtp.port=465
-mail.smtp.username=leon@zhirunjia.com
-mail.smtp.password=zhirunjia123
-mail.smtp.from=leon@zhirunjia.com
+#mail.smtp.host=smtp.qq.com
+#mail.smtp.port=465
+#mail.smtp.username=leon@zhirunjia.com
+#mail.smtp.password=zhirunjia123
+#mail.smtp.from=leon@zhirunjia.com
+mail.from=zhangzhiqiang@jia-he-jia.com
+mail.host=smtp.exmail.qq.com
+mail.password=Zhazq118
+mail.smtp.auth=true
+mail.smtp.timeout=25000
+mail.username=zhangzhiqiang@jia-he-jia.com
