-- 调整在线支付三种形式  1.  订单支付  payOrderType = 0  2 = 充值支付（保存不变） 3 = 订单差价支付

--- a/jhj-app/src/main/resources/wx-pay.properties
+++ b/jhj-app/src/main/resources/wx-pay.properties
@@ -13,6 +13,7 @@ wx_check_token_url=https://api.weixin.qq.com/sns/auth
 
 #sync_notify_url#
 wx_order_notify_url=http://www.jia-he-jia.com/jhj-app/app/wxpay-notify-order.do
+wx_orderext_notify_url=http://www.jia-he-jia.com/jhj-app/app/wxpay-notify-order-ext.do
 wx_ordercard_notify_url=http://www.jia-he-jia.com/jhj-app/app/wxpay-notify-ordercard.do
 wx_order_phone_notify_url=http://www.jia-he-jia.com/jhj-app/app/recharge_real.do
 
