--- a/.gitignore
+++ b/.gitignore
@@ -21,5 +21,5 @@ target
 /jhj-app/bin/*.gitignore
 
 # ignore node files
-jhj-web-user/node_modules/
-jhj-web-user/npm-debug.log
+/jhj-web-user/node_modules/
+/jhj-web-user/npm-debug.log
