--- a/jhj-utils/pom.xml
+++ b/jhj-utils/pom.xml
@@ -19,7 +19,12 @@
 	</properties>
 
 	<dependencies>
-
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>yuntongxun</groupId>
 			<artifactId>ccp.rest.sms</artifactId>
