--- a/jhj-app/src/main/resources/wx-pay.properties
+++ b/jhj-app/src/main/resources/wx-pay.properties
@@ -16,4 +16,5 @@ wx_order_notify_url=http://www.jia-he-jia.com/jhj-app/app/wxpay-notify-order.do
 wx_orderext_notify_url=http://www.jia-he-jia.com/jhj-app/app/wxpay-notify-order-ext.do
 wx_ordercard_notify_url=http://www.jia-he-jia.com/jhj-app/app/wxpay-notify-ordercard.do
 wx_order_phone_notify_url=http://www.jia-he-jia.com/jhj-app/app/recharge_real.do
+wx_period_order_notify_url=http://www.jia-he-jia.com/jhj-app/app/wxpay-notify-periodOrder.do
 
