--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,145 @@ target
 
 
 rebel.xml
+/.idea/.name
+/.idea/artifacts/jhj_app_war.xml
+/.idea/artifacts/jhj_app_war_exploded.xml
+/.idea/artifacts/jhj_oa_war.xml
+/.idea/artifacts/jhj_oa_war_exploded.xml
+/.idea/compiler.xml
+/.idea/copyright/profiles_settings.xml
+/.idea/encodings.xml
+/.idea/libraries/Maven__aopalliance_aopalliance_1_0.xml
+/.idea/libraries/Maven__com_alibaba_druid_1_0_9.xml
+/.idea/libraries/Maven__com_alibaba_fastjson_1_2_0.xml
+/.idea/libraries/Maven__com_baidu_yun_com_baidu_yun_push_3_0_0.xml
+/.idea/libraries/Maven__com_fasterxml_classmate_1_0_0.xml
+/.idea/libraries/Maven__com_fasterxml_jackson_core_jackson_annotations_2_4_2.xml
+/.idea/libraries/Maven__com_fasterxml_jackson_core_jackson_core_2_4_2.xml
+/.idea/libraries/Maven__com_fasterxml_jackson_core_jackson_databind_2_4_2.xml
+/.idea/libraries/Maven__com_fasterxml_jackson_jaxrs_jackson_jaxrs_base_2_4_2.xml
+/.idea/libraries/Maven__com_fasterxml_jackson_jaxrs_jackson_jaxrs_json_provider_2_4_2.xml
+/.idea/libraries/Maven__com_fasterxml_jackson_module_jackson_module_jaxb_annotations_2_4_2.xml
+/.idea/libraries/Maven__com_getui_com_gexin_rp_sdk_base_4_0_0_2.xml
+/.idea/libraries/Maven__com_getui_com_gexin_rp_sdk_http_4_0_0_2.xml
+/.idea/libraries/Maven__com_getui_com_gexin_rp_sdk_template_4_0_0_2.xml
+/.idea/libraries/Maven__com_github_jsqlparser_jsqlparser_0_9_1.xml
+/.idea/libraries/Maven__com_github_pagehelper_pagehelper_3_2_3.xml
+/.idea/libraries/Maven__com_github_pagehelper_pagehelper_3_4_2.xml
+/.idea/libraries/Maven__com_github_penggle_kaptcha_2_3_2.xml
+/.idea/libraries/Maven__com_google_code_gson_gson_2_3.xml
+/.idea/libraries/Maven__com_google_protobuf_protobuf_java_2_6_1.xml
+/.idea/libraries/Maven__com_google_zxing_core_3_2_0.xml
+/.idea/libraries/Maven__com_jhlabs_filters_2_0_235_1.xml
+/.idea/libraries/Maven__commons_beanutils_commons_beanutils_1_8_0.xml
+/.idea/libraries/Maven__commons_codec_commons_codec_1_10.xml
+/.idea/libraries/Maven__commons_collections_commons_collections_3_2_1.xml
+/.idea/libraries/Maven__commons_configuration_commons_configuration_1_10.xml
+/.idea/libraries/Maven__commons_digester_commons_digester_2_0.xml
+/.idea/libraries/Maven__commons_fileupload_commons_fileupload_1_3_1.xml
+/.idea/libraries/Maven__commons_httpclient_commons_httpclient_3_1.xml
+/.idea/libraries/Maven__commons_io_commons_io_2_2.xml
+/.idea/libraries/Maven__commons_lang_commons_lang_2_5.xml
+/.idea/libraries/Maven__commons_logging_commons_logging_1_2.xml
+/.idea/libraries/Maven__fr_opensagres_xdocreport_org_apache_poi_xwpf_converter_core_1_0_5.xml
+/.idea/libraries/Maven__fr_opensagres_xdocreport_org_apache_poi_xwpf_converter_xhtml_1_0_5.xml
+/.idea/libraries/Maven__javax_activation_activation_1_1.xml
+/.idea/libraries/Maven__javax_annotation_javax_annotation_api_1_2.xml
+/.idea/libraries/Maven__javax_mail_mail_1_5_0_b01.xml
+/.idea/libraries/Maven__javax_servlet_javax_servlet_api_3_1_0.xml
+/.idea/libraries/Maven__javax_servlet_jsp_jsp_api_2_2_1_b03.xml
+/.idea/libraries/Maven__javax_servlet_jsp_jstl_jstl_api_1_2.xml
+/.idea/libraries/Maven__javax_servlet_jstl_1_2.xml
+/.idea/libraries/Maven__javax_servlet_servlet_api_2_5.xml
+/.idea/libraries/Maven__javax_servlet_servlet_api_3_0_alpha_1.xml
+/.idea/libraries/Maven__javax_validation_validation_api_1_1_0_Final.xml
+/.idea/libraries/Maven__javax_ws_rs_javax_ws_rs_api_2_0_1.xml
+/.idea/libraries/Maven__junit_junit_4_11.xml
+/.idea/libraries/Maven__log4j_log4j_1_2_17.xml
+/.idea/libraries/Maven__mysql_mysql_connector_java_5_1_33.xml
+/.idea/libraries/Maven__net_sf_ezmorph_ezmorph_1_0_6.xml
+/.idea/libraries/Maven__net_sf_json_lib_json_lib_jdk15_2_4.xml
+/.idea/libraries/Maven__net_sf_jxls_jxls_core_1_0_6.xml
+/.idea/libraries/Maven__org_apache_commons_commons_jexl_2_0_1.xml
+/.idea/libraries/Maven__org_apache_commons_commons_lang3_3_0.xml
+/.idea/libraries/Maven__org_apache_commons_commons_pool2_2_3.xml
+/.idea/libraries/Maven__org_apache_httpcomponents_httpclient_4_3_5.xml
+/.idea/libraries/Maven__org_apache_httpcomponents_httpcore_4_3_2.xml
+/.idea/libraries/Maven__org_apache_httpcomponents_httpmime_4_3_4.xml
+/.idea/libraries/Maven__org_apache_poi_ooxml_schemas_1_1.xml
+/.idea/libraries/Maven__org_apache_poi_poi_3_13.xml
+/.idea/libraries/Maven__org_apache_poi_poi_ooxml_3_13.xml
+/.idea/libraries/Maven__org_apache_poi_poi_ooxml_schemas_3_13.xml
+/.idea/libraries/Maven__org_apache_poi_poi_scratchpad_3_13.xml
+/.idea/libraries/Maven__org_apache_xmlbeans_xmlbeans_2_6_0.xml
+/.idea/libraries/Maven__org_aspectj_aspectjweaver_1_8_2.xml
+/.idea/libraries/Maven__org_codehaus_jackson_jackson_core_asl_1_8_5.xml
+/.idea/libraries/Maven__org_codehaus_jackson_jackson_core_lgpl_1_8_5.xml
+/.idea/libraries/Maven__org_codehaus_jackson_jackson_jaxrs_1_8_5.xml
+/.idea/libraries/Maven__org_codehaus_jackson_jackson_mapper_asl_1_9_13.xml
+/.idea/libraries/Maven__org_codehaus_jackson_jackson_mapper_lgpl_1_8_5.xml
+/.idea/libraries/Maven__org_codehaus_jackson_jackson_xc_1_8_5.xml
+/.idea/libraries/Maven__org_eclipse_jetty_jetty_continuation_9_3_0_M0.xml
+/.idea/libraries/Maven__org_eclipse_jetty_jetty_http_9_3_0_M0.xml
+/.idea/libraries/Maven__org_eclipse_jetty_jetty_io_9_3_0_M0.xml
+/.idea/libraries/Maven__org_eclipse_jetty_jetty_security_9_3_0_M0.xml
+/.idea/libraries/Maven__org_eclipse_jetty_jetty_server_9_3_0_M0.xml
+/.idea/libraries/Maven__org_eclipse_jetty_jetty_servlet_9_3_0_M0.xml
+/.idea/libraries/Maven__org_eclipse_jetty_jetty_servlets_9_3_0_M0.xml
+/.idea/libraries/Maven__org_eclipse_jetty_jetty_util_9_3_0_M0.xml
+/.idea/libraries/Maven__org_eclipse_jetty_jetty_webapp_9_3_0_M0.xml
+/.idea/libraries/Maven__org_eclipse_jetty_jetty_xml_9_3_0_M0.xml
+/.idea/libraries/Maven__org_glassfish_hk2_external_aopalliance_repackaged_2_4_0_b10.xml
+/.idea/libraries/Maven__org_glassfish_hk2_external_javax_inject_2_4_0_b10.xml
+/.idea/libraries/Maven__org_glassfish_hk2_hk2_api_2_4_0_b10.xml
+/.idea/libraries/Maven__org_glassfish_hk2_hk2_locator_2_4_0_b10.xml
+/.idea/libraries/Maven__org_glassfish_hk2_hk2_utils_2_4_0_b10.xml
+/.idea/libraries/Maven__org_glassfish_hk2_osgi_resource_locator_1_0_1.xml
+/.idea/libraries/Maven__org_glassfish_jersey_bundles_repackaged_jersey_guava_2_17.xml
+/.idea/libraries/Maven__org_glassfish_jersey_core_jersey_client_2_17.xml
+/.idea/libraries/Maven__org_glassfish_jersey_core_jersey_common_2_17.xml
+/.idea/libraries/Maven__org_glassfish_jersey_media_jersey_media_multipart_2_17.xml
+/.idea/libraries/Maven__org_glassfish_web_jstl_impl_1_2.xml
+/.idea/libraries/Maven__org_hamcrest_hamcrest_core_1_3.xml
+/.idea/libraries/Maven__org_hibernate_hibernate_validator_5_1_2_Final.xml
+/.idea/libraries/Maven__org_javassist_javassist_3_18_1_GA.xml
+/.idea/libraries/Maven__org_jboss_logging_jboss_logging_3_1_3_GA.xml
+/.idea/libraries/Maven__org_jdom_jdom_1_1_3.xml
+/.idea/libraries/Maven__org_json_json_20090211.xml
+/.idea/libraries/Maven__org_jsoup_jsoup_1_9_1.xml
+/.idea/libraries/Maven__org_jvnet_mimepull_mimepull_1_9_3.xml
+/.idea/libraries/Maven__org_mockito_mockito_all_1_9_5.xml
+/.idea/libraries/Maven__org_mybatis_mybatis_3_2_8.xml
+/.idea/libraries/Maven__org_mybatis_mybatis_spring_1_2_2.xml
+/.idea/libraries/Maven__org_slf4j_slf4j_api_1_7_7.xml
+/.idea/libraries/Maven__org_slf4j_slf4j_simple_1_7_7.xml
+/.idea/libraries/Maven__org_springframework_spring_aop_4_1_1_RELEASE.xml
+/.idea/libraries/Maven__org_springframework_spring_aspects_4_1_1_RELEASE.xml
+/.idea/libraries/Maven__org_springframework_spring_beans_4_1_1_RELEASE.xml
+/.idea/libraries/Maven__org_springframework_spring_context_4_1_1_RELEASE.xml
+/.idea/libraries/Maven__org_springframework_spring_context_support_4_1_1_RELEASE.xml
+/.idea/libraries/Maven__org_springframework_spring_core_4_1_1_RELEASE.xml
+/.idea/libraries/Maven__org_springframework_spring_expression_4_1_1_RELEASE.xml
+/.idea/libraries/Maven__org_springframework_spring_jdbc_4_1_1_RELEASE.xml
+/.idea/libraries/Maven__org_springframework_spring_jms_4_1_1_RELEASE.xml
+/.idea/libraries/Maven__org_springframework_spring_messaging_4_1_1_RELEASE.xml
+/.idea/libraries/Maven__org_springframework_spring_orm_4_1_1_RELEASE.xml
+/.idea/libraries/Maven__org_springframework_spring_oxm_4_1_1_RELEASE.xml
+/.idea/libraries/Maven__org_springframework_spring_test_4_1_1_RELEASE.xml
+/.idea/libraries/Maven__org_springframework_spring_tx_4_1_1_RELEASE.xml
+/.idea/libraries/Maven__org_springframework_spring_web_4_1_1_RELEASE.xml
+/.idea/libraries/Maven__org_springframework_spring_webmvc_4_1_1_RELEASE.xml
+/.idea/libraries/Maven__redis_clients_jedis_2_8_0.xml
+/.idea/libraries/Maven__stax_stax_api_1_0_1.xml
+/.idea/libraries/Maven__yuntongxun_CCP_REST_SDK_JAVA_v2_7r_0_0_1.xml
+/.idea/libraries/Maven__yuntongxun_ccp_rest_sms_2_6_3.xml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/vcs.xml
+/.idea/workspace.xml
+/*.iml
+/jhj-service/*.iml
+/jhj-utils/*.iml
+/jhj-app/*.iml
+/jhj-dao/*.iml
+/jhj-oa/*.iml
